Se creó con Colab

--- a/DBscientist.ipynb
+++ b/DBscientist.ipynb
@@ -28,41 +28,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "id": "9C6fFcrhixTS",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 290
+          "height": 218
         },
-        "outputId": "df56ae09-ac14-437c-b4d2-bf3f8dfe5cf9"
+        "outputId": "e33ecd1d-ec5c-4444-a076-a877c141ebb7"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/lib/python3.11/pathlib.py:540: RuntimeWarning: coroutine 'fetch_colab_params' was never awaited\n",
-            "  return self._str\n",
-            "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "❌ Failed to fetch URL params: object str can't be used in 'await' expression\n"
-          ]
-        },
-        {
           "output_type": "error",
           "ename": "Exception",
-          "evalue": "❌ Required URL parameters missing. Please pass icon_id and user_id in the Colab URL.",
+          "evalue": "❌ Missing icon_id or user_id in Colab URL",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-3191171066.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0micon_id\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0muser_id\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"❌ Required URL parameters missing. Please pass icon_id and user_id in the Colab URL.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"📌 icon_id: {icon_id}, user_id: {user_id}, algorithm: {ALGORITHM}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mException\u001b[0m: ❌ Required URL parameters missing. Please pass icon_id and user_id in the Colab URL."
+            "\u001b[0;32m/tmp/ipython-input-3991093696.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0micon_id\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0muser_id\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"❌ Missing icon_id or user_id in Colab URL\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"📌 icon_id: {icon_id}, user_id: {user_id}, algorithm: {ALGORITHM}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mException\u001b[0m: ❌ Missing icon_id or user_id in Colab URL"
           ]
         }
       ],
