Se creó con Colab

--- a/DBscientist.ipynb
+++ b/DBscientist.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/CUTMt//1bdi80BXZ8G3F",
+      "authorship_tag": "ABX9TyMoHSpmvAo9HoskOmBaOXA0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {
         "id": "9C6fFcrhixTS",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 218
         },
-        "outputId": "e33ecd1d-ec5c-4444-a076-a877c141ebb7"
+        "outputId": "da917073-62b8-443e-ea6f-c39faf5d294d"
       },
       "outputs": [
         {
@@ -45,7 +45,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-3991093696.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0micon_id\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0muser_id\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"❌ Missing icon_id or user_id in Colab URL\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"📌 icon_id: {icon_id}, user_id: {user_id}, algorithm: {ALGORITHM}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-1668397136.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0micon_id\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0muser_id\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"❌ Missing icon_id or user_id in Colab URL\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"📌 icon_id: {icon_id}, user_id: {user_id}, algorithm: {algorithm}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mException\u001b[0m: ❌ Missing icon_id or user_id in Colab URL"
           ]
         }
@@ -85,12 +85,12 @@
         "})()\n",
         "\"\"\"\n",
         "\n",
-        "icon_id, user_id, ALGORITHM = output.eval_js(js)\n",
+        "icon_id, user_id, algorithm = output.eval_js(js)\n",
         "\n",
         "if not icon_id or not user_id:\n",
         "    raise Exception(\"❌ Missing icon_id or user_id in Colab URL\")\n",
         "\n",
-        "print(f\"📌 icon_id: {icon_id}, user_id: {user_id}, algorithm: {ALGORITHM}\")\n",
+        "print(f\"📌 icon_id: {icon_id}, user_id: {user_id}, algorithm: {algorithm}\")\n",
         "\n",
         "def get_url_param(name):\n",
         "    return output.eval_js(f\"\"\"\n",
@@ -186,12 +186,12 @@
         "print(classification_report(y_test, y_pred))\n",
         "\n",
         "# 💾 Optional: Save model\n",
-        "if ALGORITHM == 'tabnet':\n",
+        "if algorithm == 'tabnet':\n",
         "    clf.save_model(\"tabnet_model.zip\")\n",
-        "elif ALGORITHM == 'mlp':\n",
+        "elif algorithm == 'mlp':\n",
         "    import joblib\n",
         "    joblib.dump(clf, \"mlp_model.pkl\")\n",
-        "elif ALGORITHM == 'dcn':\n",
+        "elif algorithm == 'dcn':\n",
         "    model.save(\"dcn_model.h5\")\n",
         "\n",
         "print(\"✅ Model saved.\")"
