Se creó con Colab

--- a/DBscientist.ipynb
+++ b/DBscientist.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMoHSpmvAo9HoskOmBaOXA0",
+      "authorship_tag": "ABX9TyPgoVhWM23x2yzpkHvHJrpB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -127,7 +127,7 @@
         "X_train, X_test, y_train, y_test = train_test_split(X.values, y.values, test_size=0.2, random_state=42)\n",
         "\n",
         "# 🚀 Train model\n",
-        "if ALGORITHM == 'tabnet':\n",
+        "if algorithm == 'tabnet':\n",
         "    clf = TabNetClassifier(\n",
         "        n_d=8, n_a=8,\n",
         "        n_steps=3,\n",
@@ -145,7 +145,7 @@
         "    )\n",
         "    y_pred = clf.predict(X_test)\n",
         "\n",
-        "elif ALGORITHM == 'mlp':\n",
+        "elif algorithm == 'mlp':\n",
         "    clf = MLPClassifier(\n",
         "        hidden_layer_sizes=(HYPERPARAMS['hidden_units'],),\n",
         "        max_iter=HYPERPARAMS[\"epochs\"],\n",
@@ -156,7 +156,7 @@
         "    clf.fit(X_train, y_train)\n",
         "    y_pred = clf.predict(X_test)\n",
         "\n",
-        "elif ALGORITHM == 'dcn':\n",
+        "elif algorithm == 'dcn':\n",
         "    input_dim = X_train.shape[1]\n",
         "    inputs = keras.Input(shape=(input_dim,))\n",
         "\n",
