Se creó con Colab

--- a/DBscientist.ipynb
+++ b/DBscientist.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPgoVhWM23x2yzpkHvHJrpB",
+      "authorship_tag": "ABX9TyMIyHZkm0tVWXWkNoEm1lLU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,17 +75,14 @@
         "import nest_asyncio\n",
         "import asyncio\n",
         "\n",
-        "js = \"\"\"\n",
-        "(async function() {\n",
-        "  const params = new URLSearchParams(window.location.search);\n",
-        "  const icon_id = params.get(\"icon_id\");\n",
-        "  const user_id = params.get(\"user_id\");\n",
-        "  const algorithm = params.get(\"algorithm\") || \"tabnet\";\n",
-        "  return [icon_id, user_id, algorithm];\n",
-        "})()\n",
-        "\"\"\"\n",
+        "js =\n",
         "\n",
-        "icon_id, user_id, algorithm = output.eval_js(js)\n",
+        "param_str = output.eval_js(js)\n",
+        "params = json.loads(param_str)\n",
+        "\n",
+        "icon_id = params[\"icon_id\"]\n",
+        "user_id = params[\"user_id\"]\n",
+        "algorithm = params[\"algorithm\"]\n",
         "\n",
         "if not icon_id or not user_id:\n",
         "    raise Exception(\"❌ Missing icon_id or user_id in Colab URL\")\n",
